HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestInvalidProcedureShape/Source/Main.uv
//! Rejected source-native test attribute specimen for generic test procedure shape.

#test
public procedure testInvalidProcedureShapeReference<TValue>() -> bool
|: |= @result
{
    return true
}
